--- a/php/templates/default/logon.css
+++ b/php/templates/default/logon.css
@@ -29,9 +29,12 @@ body {
 }
 
 img.background	{
+	position: fixed;
+	min-height: 100%;
 	width: 100%;
-	height: 100%;
+	height: auto;
 	object-fit: cover;
+	overflow: hidden;
 }
 
 body > h1 {
@@ -53,15 +56,15 @@ div.logon {
 	margin:	auto;
 	background: white;
 	width: 300px;
-	height: 220px;
+	height: 240px;
 	border-radius: 15px;
 	opacity: 0.95;
 	box-shadow: 5px 5px 5px 5px rgba(0,0,0,0.5);
-	background: linear-gradient(to bottom, #1e5799 0%,#7db9e8 100%);
+	background: linear-gradient(to bottom, #777777 0%,#ffffff 100%);
 }
 
 div.logon h1 {
-	background: #1e5799;
+	background: #777777;
 	color: white;
 	border-radius: 15px 15px 0 0;
 	padding: 10px;
@@ -87,8 +90,8 @@ div.logon input {
 
 div.logon input[type=text],
 div.logon input[type=password] {
-	width: 256px;
-	height: 35px;
+	width: 250px;
+	height: 22px;
 	padding: 8px;
 	margin: 0 20px 5px 20px;
 	border: 1px solid rgba(0,0,0,0.5);
@@ -103,7 +106,7 @@ div.logon input[type=submit] {
 	width: 300px;
 	padding: 10px;
 	margin: auto 0 0 0;
-	background: #1e5799;
+	background: #999999;
 	color: white;
 	font-size: 1.5em;
 	font-weight: bold;
@@ -114,5 +117,5 @@ div.logon input[type=submit] {
 }
 	
 div.logon input[type=submit]:hover {
-	background: #7db9e8;
+	background: #bbbbbb;
 }
