Added some feedback for a wrong username/password
Trying to log on with a wrong username or password, now gives an error
when returning to the logon screen.

Fixes #76

--- a/php/templates/default/logon.css
+++ b/php/templates/default/logon.css
@@ -119,3 +119,10 @@ div.logon input[type=submit] {
 div.logon input[type=submit]:hover {
 	background: #bbbbbb;
 }
+
+div.logon div.error {
+	text-align: center;
+	margin: 0 20px;
+	font-weight: bold;
+	color: red;
+}
